[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["hyuckkim <monkeyhyuck@naver.com>"]
description = "A sample project with wasm-pack"
license = "MIT/apache-2.0"
repository = "https://github.com/hyuckkim/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"