[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["hyuckkim <monkeyhyuck@naver.com>"]
description = "A sample project with wasm-pack"
license = "MIT/apache-2.0"
repository = "https://github.com/hyuckkim/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
imagequant = {version = "4.0.0", default-features = false}
js-sys = "0.3"
rgb = "0.8"
deflate = "1.0"
bit-vec = "0.6"
console_error_panic_hook = "0.1"